@@ -126,8 +126,6 @@ YAML::XS                                       = 0
 ; Validate::Tiny
 
 Yars::Client                                   = 0
-PlugAuth::Client::Tiny                         = 0
-PlugAuth::Lite                                 = 0
 Authen::Simple::PlugAuth                       = 0
 Yars                                           = 0
 
@@ -136,17 +134,14 @@ PlugAuth::Client                               = 0
 PlugAuth::Plugin::Audit                        = 0
 PlugAuth::Plugin::DBIAuth                      = 0
 PlugAuth::Plugin::LDAP                         = 0
+PlugAuth::Client::Tiny                         = 0
+PlugAuth::Lite                                 = 0
 
 [Author::Plicease::OSPrereqsNot / MSWin32]
-Clustericious                                  = 0
 Data::Downloader                               = 0
 AnyEvent::Open3::Simple                        = 0
 Sereal::Encoder                                = 0
 Yars                                           = 0
-PlugAuth                                       = 0
-PlugAuth::Plugin::Audit                        = 0
-PlugAuth::Plugin::DBIAuth                      = 0
-PlugAuth::Plugin::LDAP                         = 0
 
 [Author::Plicease::OSPrereqsNot / cygwin]
 Test::Strict                                   = 0
