@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - install Clustericious + PlugAuth on MSWin32 (now that it is supported)
 
 0.37      2013-05-30 14:36:57 America/New_York
   - rm HTML::Barcode::QRCode
